# flyos-clipboard

./: CMakeLists.txt  README.md  flyos-clipboard.desktop  main.cpp  mainwindow.cpp  mainwindow.h
base/: fileUtil.cpp  fileUtil.h
images/: images.qrc
styles/: clearAllButton.css  closeButton.css  copyButton.css  listItem.css  settingsButton.css  styles.qrc
widgets/: AboutDialog.cpp  AboutDialog.h  ExitDialog.cpp  ExitDialog.h  ListItem.cpp  ListItem.h  ListWidget.cpp  ListWidget.h
